--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "rm -rf .next && next build",
+    "clean": "rm -rf .next .cache",
     "start": "next start",
     "lint": "next lint"
   },
